--- a/client/src/scss/global.scss
+++ b/client/src/scss/global.scss
@@ -23,7 +23,7 @@
 }
 
 body {
-  background-image: url('/images/background.jpg');
+  background-image: url('/images/background2.webp');
   background-repeat: inherit;
   background-size: cover;
 }
