--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -74,9 +74,17 @@
   }
 
   &__chatBox {
-    height: 350px;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    background-color: rgb(232, 232, 232);
+    border-radius: 00.50rem;
+    margin-bottom: 10px;
+
+    &__messageDiv {
+      height: 350px;
+      overflow-x: hidden;
+      overflow-y: scroll;
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   &__active {
@@ -113,6 +121,90 @@
       &:focus {
         background: #e2e8f0;
         color: #000;
+      }
+    }
+
+    &__lists {
+      display: flex;
+      flex-direction: column;
+      padding: 0.75rem;
+      margin-top: 15px;
+      background: rgb(248, 248, 248);
+      // width: 100%;
+      // height: 100%;
+      border-radius: .5rem;
+      overflow-y: hidden;
+
+      .ant-list {
+        border: none;
+        background-color: transparent;
+      }
+
+      .ant-list-item-meta {
+        background-color: rgb(232, 232, 232);
+        padding: 15px;
+        border-radius: .5rem;
+
+        &:not(:first-child) {
+          margin-top: 15px;
+        }
+      }
+    }
+
+    &__chats {
+      width: 68%;
+      display: flex;
+      background-color: #fff;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 10px;
+      padding-bottom: 20px;
+      border-radius: 5px;
+      border-width: 1px;
+      min-height: 530px;
+
+      span {
+        font-size: 1.857rem;
+        font-weight: normal;
+      }
+    }
+  }
+
+  &__chats {
+    width: 68%;
+    display: flex;
+    background-color: #fff;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 10px 0px 10px;
+    border-radius: 5px;
+    border-width: 1px;
+    min-height: 530px;
+
+    .example {
+      margin: 10px 0;
+      margin-bottom: 20px;
+      padding: 0px 50px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.05);
+      height: 430px;
+      width: 100%;
+      border-radius: 4px;
+      font-size: larger;
+
+      .ant-spin-dot {
+        font-size: 48px;
+
+        i {
+          background-color: #000;
+        }
+
       }
     }
   }
